tests/ui/codemap_tests/unicode.normal.stderr
error[E0703]: invalid ABI: found `路濫狼á́́`
  --> $DIR/unicode.rs:6:8
   |
LL | extern "路濫狼á́́" fn foo() {}
   |        ^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0703`.
